fix small bug that was causing alert to be visible on page load

--- a/libraryapp/src/main/resources/static/styling/components/_alert.scss
+++ b/libraryapp/src/main/resources/static/styling/components/_alert.scss
@@ -1,6 +1,5 @@
 .alert {
   display: none;
-  display: flex;
   height: 100vh;
   width: 100%;
   position: fixed;
@@ -9,7 +8,6 @@
   background-color: rgba($color-black, .8);
   z-index: 9999;
   opacity: 0;
-  visibility: hidden;
   transition: all .3s;
   align-items: center;
   justify-content: center;
