--- a/libraryapp/src/main/resources/static/styling/main.css
+++ b/libraryapp/src/main/resources/static/styling/main.css
@@ -95,7 +95,6 @@ a:hover, a:focus, a:active {
 
 .alert {
   display: none;
-  display: flex;
   height: 100vh;
   width: 100%;
   position: fixed;
@@ -104,7 +103,6 @@ a:hover, a:focus, a:active {
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 9999;
   opacity: 0;
-  visibility: hidden;
   transition: all 0.3s;
   align-items: center;
   justify-content: center;
